# NeutralBiaz

./: .env.example  .gitignore  Debiazed_LLM_Promting.md  IMPLEMENTATION_SUMMARY.md  Project_todo.md  README.md  TESTING_SUMMARY.md  docker-compose.yml  requirements-prod.txt  requirements.txt  simple_backend.py
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: ci-cd.yml  deploy.yml  test-pipeline.yml
.hive-mind/: config.json
bias-dashboard/: .env.example  README_INTEGRATION.md  demo.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
bias-dashboard/scripts/: test-integration.js
bias-dashboard/src/: App.tsx  index.css
bias-engine/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bias-engine/scripts/: start.sh  test.sh
bias-engine/src/bias_engine/: __init__.py  main.py
bias-engine/src/bias_engine/api/: __init__.py
bias-engine/src/bias_engine/api/routes/: analyze.py  config.py  health.py  llm_debiasing.py  models.py
bias-engine/src/bias_engine/core/: __init__.py  config.py  exceptions.py  logging_config.py
bias-engine/src/bias_engine/cultural/: __init__.py  integration.py
bias-engine/src/bias_engine/cultural/adapters/: cultural_adapter.py
bias-engine/src/bias_engine/cultural/analyzers/: cultural_analyzer.py
bias-engine/src/bias_engine/cultural/intelligence/: cultural_intelligence.py
bias-engine/src/bias_engine/cultural/models/: hofstede_model.py
bias-engine/src/bias_engine/llm/: __init__.py  client.py  config.py  cultural_integration.py  models.py  pipeline.py  prompts.py  self_bias.py
bias-engine/src/bias_engine/models/: __init__.py  schemas.py
bias-engine/tests/: __init__.py  conftest.py
bias-engine/tests/unit/: test_analyze.py  test_config.py  test_health.py  test_models.py
config/: bias_families.json  prompts.yaml
deployment/: .env.example
deployment/configs/: default.conf  nginx.conf
deployment/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.prod.yml
deployment/kubernetes/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml  secrets.yaml
deployment/scripts/: deploy.sh
deployment/terraform/: main.tf  outputs.tf  variables.tf
docs/: cultural_adaptation_engine.md  development_environment_guide.md  implementation_roadmap.md  llm_integration.md  master_execution_summary.md  technical_architecture_blueprint.md  unified_execution_strategy.md
docs/analysis/: CODEBASE_ANALYSIS.md  DEVELOPMENT_PLAN.md  EXECUTIVE_SUMMARY.md
examples/: cultural_adaptation_examples.py  env.llm.example
memory/: claude-flow@alpha-data.json
scripts/: demo_bias_detection.py  simple_test.py
src/: __init__.py
tests/: README.md
(+60 files in other folders)
